fixed overlapping review btn

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ h3 {
   /* border: 1px solid red; */
   border-radius: 5px;
   width: 25%;
-  margin: 2%;
+  margin: 4%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -163,6 +163,7 @@ button.close span:hover{
   }
   .card{
     width: 100%;
+    margin-bottom: 15%;
   }
 }
 
